# DRG-Barrel-Game-Bot

./: .gitignore  main.py  pyproject.toml  settings.toml
drg_barrel_game_bot/: __init__.py  basket_predictor.py  border_manager.py  detector.py  detectors.py  difference_basket_detector.py  hsv_basket_detector.py  kick_manager.py  point_basket_detector.py  predictor.py  recorder.py  setting_loader.py  settings_loader.py  state_manager.py  status_manager.py  toml_setting_loader.py  utils.py  window_recorder.py
drg_barrel_game_bot/detectors/: __init__.py  ai.py  detector.py  difference.py  hsv.py  point.py
drg_barrel_game_bot/utils/: __init__.py  draw.py  resize.py  resolution.py
test/: test_ai_basket_detector.py  test_basket_detector.py  test_basket_predictor.py  test_basket_predictorpy  test_detector_view.py  test_diff_basket_detector.py  test_hsv_basket_detector.py  test_integration.py  test_kick_manager.py  test_point_basket_detector.py  test_predictor.py  test_predictor_view.py  test_recorder.py
