[project]
name = "drg-barrel-game-bot"
version = "0.6.0"
description = ""
authors = [
    {name = "IZomBie",email = "patrik009009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0.0"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mss (>=10.0.0,<11.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "toml (>=0.10.2,<0.11.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
