[project]
name = "drg-barrel-game-bot"
version = "0.10.1"
description = ""
authors = [
    {name = "IZomBie",email = "patrik009009@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0.0"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "mss (>=10.0.0,<11.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "toml (>=0.10.2,<0.11.0)",
    "ultralytics (>=8.3.152,<9.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "pygetwindow (>=0.0.9,<0.0.10)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "supplemental"

[tool.poetry.dependencies] 
torch = {source = "pytorch-cu128"} 
torchvision = {source = "pytorch-cu128"}
torchaudio = {source = "pytorch-cu128"}
