[tool.poetry]
name = "drg_barrel_game_bot"
version = "0.12.0"
description = ""
authors = [
    "IZomBie <patrik009009@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9, <4.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
numpy = "*"
screeninfo = ">=0.8.1,<0.9.0"
keyboard = ">=0.13.5,<0.14.0"
toml = ">=0.10.2,<0.11.0"
pygetwindow = ">=0.0.9,<0.0.10"
mss = ">=10.0.0,<11.0.0"
yolov8-onnx = "^1.0.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"